Bài tập về nhà ss1

--- a/ss01/baitap/bt6.html
+++ b/ss01/baitap/bt6.html
@@ -7,11 +7,29 @@
 </head>
 <body>
     <h1>Họ và tên : Phùng Thanh Độ </h1>
-    <h3>Vị trí sờ trim mơ nổi tiếng nhất Việt Nam</h3>
+    <h4>Vị trí sờ trim mơ nổi tiếng nhất Việt Nam</h4>
     <img src="https://media.2dep.vn/upload/thucquyen/2022/03/01/do-mixi-la-ai-tu-nhan-vien-van-phong-tro-thanh-tu-hoang-streamer-giau-nhat-viet-nam-1646124713-8.jpg"alt="">
-    <h2> thông tin liên hệ</h2>
+    <h2> Thông tin liên hệ</h2>
     <ul>
-        <li> xin chao</li>
+        <li> Email:Phungthanhdo@gmail.com</li>
+        <li> Sđt: 123456789</li>
+        <li> Địa chỉ: nhà cây đạ,đường làng lá,ở tận cây mít đi tít vào trong</li>
+    </ul>
+    <h1>Kỹ năng</h1>
+    <ul>
+        <li>Làm việc nhóm</li>
+        <li>Nói nhiều</li>
+        <li>Hướng ngoại</li>
+    </ul>
+    <h2>Kinh nghiệm làm việc</h2>
+    <ul>
+        <li>Từng làm nhân viên văn phòng 2 năm</li>
+        <li>có kinh nghiệm chơi game và đã từng top 1 thế giới tựa game pubg góc nhìn thứ nhất</li>
+    </ul>
+    <h2>Học vấn</h2>
+    <ul>
+        <li> Cao đẳng Bách Khoa Hà Nội</li>
+        <li> 4 năm đại học</li>
     </ul>
 </body>
 </html>
