--- a/ss05/baitap/bt6.html
+++ b/ss05/baitap/bt6.html
@@ -7,28 +7,27 @@
     <title>Document</title>
     <link rel="stylesheet" href="bt6.css">
 </head>
-
 <body>
     <h2>Center Align Text</h2>
-    <p class="W">To just center the text inside an element, use
-    <p class="what">text-align: center;</p>
+    <p class="a">To just center the text inside an element, use
+    <p class="b">text-align: center;</p>
     </p>
-    <p class="hi">This text is centered</p>
-    <div class="A">
+    <p class="c">This text is centered</p>
+    <div class="d">
         <h2>Example</h2>
-        <div class="B">
-        <p class="center">.center </p>&#123; <br>
+        <div class="e">
+        <p class="f">.center </p>&#123; <br>
 
-        <p class="text1">&nbsp;&nbsp;&nbsp;text-algin</p>: 
-        <p class="text2"> center</p>; <br>
+        <p class="g">&nbsp;&nbsp;&nbsp;text-algin</p>: 
+        <p class="h"> center</p>; <br>
 
-        <p class="text3">&nbsp;&nbsp;&nbsp;border</p>: 
-        <p class="text4"> 3px solid green</p>;<br>
+        <p class="A">&nbsp;&nbsp;&nbsp;border</p>: 
+        <p class="B"> 3px solid green</p>;<br>
 
-        <p class="text5">&#125;</p> <br> 
+        <p class="C">&#125;</p> <br> 
         </div>
         <br>
-        <input class="button" type="submit" value="Try it Yourself >>">
+        <input class="D" type="submit" value="Try it Yourself >>">
         <br>
         <br>
     </div.class>
