--- a/ss05/baitap/bt7.html
+++ b/ss05/baitap/bt7.html
@@ -12,7 +12,7 @@
     <div>
         <table class="table">
             <caption>ARTICLE MANAGEMENT TABLE</caption>
-            <thead class="heading">
+            <thead class="a">
                 <tr>
                     <th>ID</th>
                     <th>TITLE</th>
@@ -21,73 +21,73 @@
                     <th>ACTIONS</th>
                 </tr>
             </thead>
-            <tbody class="mid">
-                <tr class="row1">
+            <tbody class="b">
+                <tr class="c">
                     <td>1</td>
                     <td>Introduction to CSS</td>
                     <td>John Doe</td>
                     <td>2024-02-10</td>
                     <td>
                         <form action="">
-                            <input class="but1" type="submit" value="View">
-                            <input class="but2" type="submit" value="Update">
-                            <input class="but3" type="submit" value="Delete">
+                            <input class="b1" type="submit" value="View">
+                            <input class="b2" type="submit" value="Update">
+                            <input class="b3" type="submit" value="Delete">
 
                         </form>
                     </td>
                 </tr>
-                <tr class="row2">
+                <tr class="d">
                     <td>2</td>
                     <td>Undertanding JavaScript</td>
                     <td>Jane Smith</td>
                     <td>2024-01-22</td>
                     <td>
                         <form action="">
-                            <input class="but1" type="submit" value="View">
-                            <input class="but2" type="submit" value="Update">
-                            <input class="but3" type="submit" value="Delete">
+                            <input class="b1" type="submit" value="View">
+                            <input class="b2" type="submit" value="Update">
+                            <input class="b3" type="submit" value="Delete">
 
                         </form>
                     </td>
                 </tr>
-                <tr class="row3">
+                <tr class="e">
                     <td>3</td>
                     <td>Web Development Basics</td>
                     <td>Mike Johnson</td>
                     <td>2023-23-15</td>
                     <td>
                         <form action="">
-                            <input class="but1" type="submit" value="View">
-                            <input class="but2" type="submit" value="Update">
-                            <input class="but3" type="submit" value="Delete">
+                            <input class="b1" type="submit" value="View">
+                            <input class="b2" type="submit" value="Update">
+                            <input class="b3" type="submit" value="Delete">
 
                         </form>
                     </td>
                 </tr>
-                <tr class="row4">
+                <tr class="f">
                     <td>4</td>
                     <td>Responsive Design Techniques</td>
                     <td>Sarah Lee</td>
                     <td>2023-11-30</td>
                     <td>
                         <form action="">
-                            <input class="but1" type="submit" value="View">
-                            <input class="but2" type="submit" value="Update">
-                            <input class="but3" type="submit" value="Delete">
+                            <input class="b1" type="submit" value="View">
+                            <input class="b2" type="submit" value="Update">
+                            <input class="b3" type="submit" value="Delete">
 
                         </form>
                     </td>
                 </tr>
-                <tr class="row5">
+                <tr class="g">
                     <td>5</td>
                     <td>SEO Best Practices</td>
                     <td>Chris Brown</td>
                     <td>2023-10-18</td>
                     <td>
                         <form action="">
-                            <input class="but1" type="submit" value="View">
-                            <input class="but2" type="submit" value="Update">
-                            <input class="but3" type="submit" value="Delete">
+                            <input class="b1" type="submit" value="View">
+                            <input class="b2" type="submit" value="Update">
+                            <input class="b3" type="submit" value="Delete">
 
                         </form>
                     </td>
