--- a/ss06/baitap/bt4.html
+++ b/ss06/baitap/bt4.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="a">
-        <b>My Block</b>
+        <b class="head">My Block</b>
         <div class="div1">
         <a href="#" class="b">Home</a>&nbsp;&nbsp;&nbsp;
         <a href="#" class="b">Cetogories</a>&nbsp;&nbsp;&nbsp;
@@ -19,7 +19,7 @@
             <tr>
                 <td rowspan="2" class="c">
                     <div class="d">
-                    <p><b>Chuyên mục</b></p>
+                    <p><h2>Chuyên mục</h2></p>
                     <ul>
                         <li><a href="">CSS</a></li>
                         <li><a href="">JavaScript</a></li>
@@ -42,7 +42,7 @@
             </tr>
         </table>
     </div>
-    <div>
+    <div class="foot">
         <p>Liên Hệ: email@example.com</p>
     </div>
 </body>
